[gd_scene load_steps=3 format=3 uid="uid://c1qxwaq6en6i7"]

[ext_resource type="Script" path="res://screens/game_screen/ally_card_selector/ally_card/ally_card.gd" id="1_gw3jc"]
[ext_resource type="Texture2D" uid="uid://gmquwtosfk6p" path="res://game_objects/allies/obstructer_ally/barrier/ally_card_assets/barrier.png" id="1_pkcqc"]

[node name="AllyCard" type="TextureButton"]
texture_normal = ExtResource("1_pkcqc")
script = ExtResource("1_gw3jc")

[node name="PriceLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 94.0
offset_right = 82.0
offset_bottom = 133.0
theme_override_font_sizes/font_size = 25
text = "50"

[node name="LoadingVeil" type="ColorRect" parent="."]
visible = false
modulate = Color(0.352941, 0.352941, 0.352941, 0.705882)
custom_minimum_size = Vector2(157, 0)
layout_mode = 0
offset_right = 157.0
offset_bottom = 155.0

[node name="LoadingTimer" type="Timer" parent="."]
one_shot = true
